syntax = "proto3";

package configs;

import "Configs/dynamic_config.proto";
import "Simulation/state.proto";

// Flight phase enumeration.
enum FlightPhase {
  INITIALIZED = 0;
  READY = 1;
  BOOST = 2;
  MIDCOURSE = 3;
  TERMINAL = 4;
  TERMINATED = 5;
}

// Agent configuration.
message AgentConfig {
  // Submunitions configuration.
  message SubmunitionsConfig {
    // Number of submunitions.
    uint32 num_submunitions = 1;

    // Agent configuration.
    AgentConfig agent_config = 2;
  }

  // Configuration file.
  string config_file = 1;

  // Initial state.
  simulation.State initial_state = 2;

  // Initial state standard deviation to randomize the state variables.
  simulation.State standard_deviation = 3;

  // Dynamic configuration.
  DynamicConfig dynamic_config = 4;

  // Submunitions configuration.
  SubmunitionsConfig submunitions_config = 5;
}

// Agent swarm configuration.
message AgentSwarmConfig {
  // Number of agents.
  uint32 num_agents = 1;

  // Agent configuration.
  AgentConfig agent_config = 2;
}
